package com.partenairedecode.orderservice.client;

import com.partenairedecode.grpc.product.Product;
import com.partenairedecode.grpc.product.ProductIdRequest;
import com.partenairedecode.grpc.product.ProductServiceGrpc;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.springframework.stereotype.Component;

@Component
public class ProductClient {

    // üîë Annotation pour injecter le stub gRPC du service Product
    @GrpcClient("product-service")
    private ProductServiceGrpc.ProductServiceBlockingStub productBlockingStub;

    /**
     * Appelle le Product Service pour r√©cup√©rer les d√©tails d'un produit.
     * @param productId L'ID du produit √† rechercher.
     * @return Le message Product s'il est trouv√©.
     */
    public Product getProductDetails(String productId) {
        ProductIdRequest request = ProductIdRequest.newBuilder()
                .setProductId(productId)
                .build();
        
        try {
            // Appel synchrone bloquant (BlockingStub)
            return productBlockingStub.getProductById(request);
        } catch (Exception e) {
            System.err.println("Erreur gRPC lors de la r√©cup√©ration du produit " + productId + ": " + e.getMessage());
            // Dans un cas r√©el, vous l√®veriez une exception m√©tier ici.
            return null; 
        }
    }
}